# clustering

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/issue_template/: bug.yml  todo.yml
.github/workflows/: pr-prefix.yml  release.yml  smoke.yml
backend/: CLAUDE.md  README.md  app.py  exceptions.py  logging_setup.py  settings.py
backend/agents/: coordinator.py
backend/auth/: passwords.py  tokens.py  types.py
backend/data_access/: connection.py
backend/llm/: exceptions.py  llm_harness.py  types.py
backend/routers/: auth.py  auth_deps.py  cluster_snapshots.py  conversations.py  movies.py
configs/: default.yaml  dev.yaml  prod.yaml  test.yaml
core/: clustering.py  fusion.py  image_encoder.py  text_encoder.py  trailer_encoder.py
dataset/: README.md  scraper.py
dataset/embed/: trailer.py  trailer_embed.py  trailer_fetch.py
dataset/fetch/: poster.py  trailer.py
dataset/hub/: upload.py
dataset/io/: fetch.py  upload.py
dataset/postprocess/: offline.py
dataset/scrape/: reviews_fetch.py  scraper.py  tmdb_fetch.py
dataset/transform/: clean.py  offline.py  split.py
db/: README.md  apply.py  create_user.py  ingest.py
demo/: README.md  demo_record.sh  demo_replay.sh  record_replay.py
docs/: progress_report.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
mcp_server/: README.md  client.py  resources.py  server.py  settings.py  tools.py
notebooks/: embed_in_colab.ipynb
tests/: tests.md
(+185 files in other folders)
